--- a/styles.css
+++ b/styles.css
@@ -62,10 +62,11 @@ h2{
 }
 
 button {
-    padding: 8px 15px;
+    padding: 8px;
+    width: 100px;
+    margin-bottom: 10px;
     background-color: #4CAF50;
-    border-radius: 10%;
-    size: 10px;
+    border-radius: 30px;
     color: white;
     border: none;
     cursor: pointer;
